--- a/css/tab.css
+++ b/css/tab.css
@@ -1,8 +1,8 @@
 ﻿.triangle{
-    border-width: 0 0 150px 100vw;
+    border-width: 0 0 150px 99vw;
 }
 .triangle2{
-    border-width: 150px 100vw 0 0;
+    border-width: 150px 99vw 0 0;
 }
 /*
 
